Refactor code structure for improved readability and maintainability

--- a/apps/website-docs/content/docs/index.mdx
+++ b/apps/website-docs/content/docs/index.mdx
@@ -1,13 +1,33 @@
 ---
-title: Hello World
-description: Your first document
+title: Introduction
+description: Welcome to Yuno Demo documentation
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+# Yuno Demo Documentation
 
-## What is Next?
+Welcome to the **Yuno Demo** documentation, a demonstration application for payment integration.
+
+## What is Yuno Demo?
+
+Yuno Demo is a Next.js application that provides an interactive form builder and reusable UI components to create custom payment experiences.
+
+## Key Features
+
+- 🎨 **Form Builder**: Create and customize forms visually
+- 🧩 **UI Components**: Complete library of components based on Radix UI
+- 📱 **Responsive**: Designed to work on all devices
+- 🎭 **Themes**: Support for multiple themes and dark mode
+- ⚡ **Performance**: Optimized with React Compiler
+
+## Next Steps
 
 <Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
+  <Card title="🚀 Installation" href="/docs/installation" description="Learn how to install and configure the project" />
+  <Card title="⚡ Quick Start" href="/docs/quick-start" description="Start building in minutes" />
+  <Card title="🧩 Components" href="/docs/components" description="Explore the component library" />
+  <Card title="⚙️ API Reference" href="/docs/api/configuration" description="Complete API documentation" />
 </Cards>
+
+## Support
+
+Need help? Check our [GitHub](https://github.com/MrUprizing/demo-yuno) or open an issue.
